[package]
name = "streamrip"
description = "Recursively mirror video streams and rewrite manifests for local hosting"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
clap = { version = "4", features = ["derive"] }
url = "2"
anyhow = "1"
pathdiff = "0.2"
async-recursion = "1.1.1"
roxmltree = "0.21.1"
