[package]
name = "streamrip"
description = "Recursively mirror an HLS (.m3u8) or DASH (.mpd) stream for local hosting"
version = "0.1.1"
edition = "2024"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2"
repository = "https://github.com/sunsided/streamrip"
documentation = "https://docs.rs/streamrip"
readme = "README.md"
keywords = ["hls", "dash", "video", "streaming", "downloader"]
categories = ["command-line-utilities", "multimedia", "network-programming", "web-programming"]

[features]
default = ["hls", "dash"]
dash = ["dep:roxmltree"]
hls = ["dep:async-recursion", "dep:pathdiff"]

[dependencies]
anyhow = "1"
async-recursion = { version = "1.1.1", optional = true }
clap = { version = "4", features = ["derive"] }
pathdiff = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["rustls-tls"] }
roxmltree = { version = "0.21.1", optional = true }
tokio = { version = "1", features = ["full"] }
url = "2"
